doc/iptables/透明网关.txt
基于linux构建一个多功能(防火墙/防毒墙/进出邮件扫描/GFW穿越)透明网关


基于linux构建一个全功能(防火墙/防毒墙/进出邮件扫描/GFW穿越)透明网关
梁利文(Email/QQ/MSN:liangliwen@gmail.com) 2009-8-31

一．功能实现及相关软件：
1.    防火墙功能 iptables
2.    防毒墙 所有http请求经过透明代理iptables+squid +havp + clamav做扫描
3.    上网加速 基于Squid 缓存于内存
4.    进出邮件做病毒及垃圾邮件扫描 iptables+p3scan+clamd+spamassassin
5.    GFW穿越 Tor +Privoxy 可以上电信限制的网站 如twitter.com
6.    日志功能，DNS拦截查询记录所有机器上网记录，http拦截记录日志 bind + squid
7.    操作系统32位CentOS 5.3 内核版本: 2.6.18-128.7.1
8.    所有软件均使用开放源代码软件构建 均安装在/usr/local目录下

二．安装设定过程(需要root权限
1.    操作系统及iptables设定
开启linux系统的ip转发功能,在/etc/sysctl.conf 设定
net.ipv4.ip_forward = 1
再执行sysctl –p
2.    iptables设定
执行chkconfig iptables on
/etc/sysconfig/iptables内容如下
# Generated by iptables-save v1.3.5 on Mon Aug 31 12:16:37 2009
*filter
:INPUT DROP [33:4404]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [8543:4463834]
-A INPUT -p tcp -m tcp –tcp-flags FIN,SYN,RST,ACK SYN -m length –length 0:40 -j DROP
-A INPUT -p tcp -m tcp –tcp-flags FIN,SYN,RST,ACK SYN -m ttl –ttl-eq 117 -j DROP
-A INPUT -i lo -j ACCEPT
-A INPUT -m state –state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m limit –limit 1/sec –limit-burst 10 -j ACCEPT
-A INPUT -p udp -m multiport –ports 53,161 -j ACCEPT
-A INPUT -p tcp -m multiport –ports 22,80,8080,8082,8110,8118 -j ACCEPT
-A INPUT -p tcp -m tcp ! –tcp-flags FIN,SYN,RST,ACK SYN -m state –state NEW -j DROP
COMMIT
# Completed on Mon Aug 31 12:16:37 2009
# Generated by iptables-save v1.3.5 on Mon Aug 31 12:16:37 2009
*nat  
:PREROUTING ACCEPT [825:80210]  
:POSTROUTING ACCEPT [240:13256]
:OUTPUT ACCEPT [519:28949]
-A PREROUTING -p udp -m udp –dport 53 -j REDIRECT –to-ports 53
-A PREROUTING -p tcp -m tcp –dport 80 -j REDIRECT –to-ports 8080
-A PREROUTING -p tcp -m multiport –dports 25,110,995 -j REDIRECT –to-ports 8110
-A POSTROUTING -s 192.168.10.0/255.255.255.0 -o eth0 -j MASQUERADE
COMMIT
# Completed on Mon Aug 31 12:16:37 2009
3.squid安装设定 编译参数及版本
sbin/squid -v
Squid Cache: Version 2.7.STABLE7
configure options:  ‘–prefix=/opt/squid’ ‘–enable-storeio=ufs,aufs’ ‘–with-maxfd=10240′ ‘–with-large-files’ ‘–with-dl’ ‘–with-aio’ ‘–with-pthreads’ ‘–enable-follow-x-forwarded-for’ ‘–enable-x-accelerator-vary’ ‘–enable-linux-netfilter’ ‘–disable-carp’ ‘–enable-xmalloc-statistics’ ‘–enable-gnuregex’ ‘–enable-stacktraces’ ‘–enable-epoll’ ‘–disable-poll’ ‘–enable-forw-via-db’ ‘–disable-wccpv2′ ‘–disable-wccp’ ‘–enable-referer-log’ ‘–enable-useragent-log’ ‘–enable-delay-pools’ ‘–enable-default-err-l [...]

在/etc/fstab中加入一条如下内容，把cache放在内存中
tmpfs                   /cache                  tmpfs   size=512m,mode=0755 0 0

Squid.conf内容如下
cache_effective_user squid
cache_effective_group squid
cache_mgr liangliwen@gmail.com
http_port 8080 transparent
icp_port 0
debug_options ALL,1
visible_hostname gw
acl all src 0.0.0.0/0
acl vcache src 192.168.10.0/24
acl mgr src localhost
acl manager proto cache_object
http_access allow manager mgr
http_access deny manager
http_access allow vcache
miss_access allow all
http_access deny all
icp_access deny all
cache_mem 8 MB
cache_dir ufs /cache 512 16 64
refresh_pattern -i .(jpe?g|js|gif|png|ico)$ 43200 100% 43200
refresh_pattern -i .(zip|rar|arj|cab|exe)$ 43200 100% 43200
refresh_pattern windowsupdate.com/.*.(cab|exe)$ 43200 100% 43200
refresh_pattern download.microsoft.com/.*.(cab|exe)$ 43200 100% 43200
client_db on
logformat combined %>a %ui %un [%tl] “%rm %ru HTTP/%rv” %Hs %<st “%{Referer}>h” “%{User-Agent}>h” %Ss:%Sh
access_log /tmp/access.log combined
max_open_disk_fds 0
cache_log none
cache_store_log none
logfile_rotate 10
emulate_httpd_log off
log_ip_on_direct on
log_mime_hdrs off
pid_filename /cache/squid.pid
log_fqdn off
buffered_logs off
cache_peer 127.0.0.1 parent 8082 0 no-query no-digest no-netdb-exchange default
cache_peer_access 127.0.0.1 allow all

启动squid命令
/bin/chown -R squid:squid /cache
/usr/local/squid/sbin/squid -z -f /usr/local/squid/etc/squid.conf
/usr/local/squid/sbin/squid -f /usr/local/squid/etc/squid.conf &

4.安装clamav
clamav配置文件
LogFile /usr/local/clamav/clamd.log
LogTime yes
LogFileMaxSize 2M
PidFile /usr/local/clamav/clamd.pid
TemporaryDirectory /dev/shm
DatabaseDirectory /usr/local/clamav/share/clamav
FixStaleSocket yes
TCPSocket 3310
TCPAddr 127.0.0.1
MaxConnectionQueueLength 80
StreamMaxLength 20M
MaxThreads 80
ReadTimeout 300
MaxDirectoryRecursion 20
User clamav
AllowSupplementaryGroups yes
DetectBrokenExecutables yes
ScanPDF yes
ClamukoMaxFileSize 64M
LogClean yes
MaxConnectionQueueLength 30
StreamMaxLength 10M
StreamMaxPort 32000
MaxThreads 20
ReadTimeout 300
CommandReadTimeout 5
SendBufTimeout 200
MaxQueue 200
IdleTimeout 60
ExcludePath ^/proc/
ExcludePath ^/sys/
MaxDirectoryRecursion 20
FollowDirectorySymlinks no
FollowFileSymlinks no
SelfCheck 600
ExitOnOOM yes
ScanPE yes
ScanELF yes
ScanOLE2 yes
ScanMail yes
ScanHTML yes
ScanArchive yes
MaxScanSize 50M
MaxFileSize 30M
MaxRecursion 10
MaxFiles 15000

启动clamav命令
/usr/local/clamav/sbin/clamd &
/usr/local/clamav/bin/freshclam -d –quiet &

5.安装Havp
havp配置文件
grep -v “#” havp.config|grep .
USER clamav
GROUP clamav
DAEMON true
PIDFILE /usr/local/havp/log/havp.pid
ACCESSLOG /usr/local/havp/log/access.log
ERRORLOG /usr/local/havp/log/error.log
TRANSPARENT yes
PARENTPORT 8080
FORWARDED_IP true
X_FORWARDED_FOR true
PORT 8082
TEMPLATEPATH /usr/local/havp/etc/havp/templates/en
WHITELIST /usr/local/havp/etc/havp/whitelist
BLACKLIST /usr/local/havp/etc/havp/blacklist
ENABLECLAMLIB true
CLAMDBDIR /usr/local/clamav/share/clamav
ENABLECLAMD false
ENABLEFPROT false
ENABLEAVG false
ENABLEAVESERVER false
ENABLESOPHIE false
ENABLETROPHIE false
ENABLENOD32 false
ENABLEAVAST false
ENABLEARCAVIR false
ENABLEDRWEB false

启动havp命令
/sbin/mkfs.ext3 /dev/ram0
/bin/mount -o mand /dev/ram0 /var/tmp/havp/
/bin/chown -R clamav:clamav /var/tmp/havp
/usr/local/havp/sbin/havp

6.安装配置p3scan及spamassassin
配置文件内容
grep -v “#” /etc/p3scan/p3scan.conf |grep .
pidfile = /var/run/p3scan/p3scan.pid
maxchilds = 10
ip = 0.0.0.0
emailport = 25
virusdir = /var/spool/p3scan
extra = liangliwen@qq.com
xmail = /usr/local/email/bin/email
emergcon = liangliwen@qq.com
scannertype = clamd
scanner = 127.0.0.1:3310
virusregexp = .*: (.*) FOUND
timeout = 30
spamcheck = /usr/bin/spamc
spamc spamd renattach p3pmail
footer = /usr/local/clamav/bin/clamdscan -V

7.安装配置bind
bind配置文件内容,转发并控制abc.com域，在这儿可以控制不允许上qq,如果封其它域，增加像qq.com的配置即可，这就是传说中的DNS劫持
cat /usr/local/bind/etc/named.conf
// Default named.conf generated by install of bind-9.2.4-30.el4

options {
directory “/usr/local/bind-9.6.1-P1/var”;
dump-file “/usr/local/bind-9.6.1-P1/var/cache_dump.db”;
statistics-file “/usr/local/bind-9.6.1-P1/var/named_stats.txt”;
forwarders { 202.96.128.86; 202.96.134.133; };
};

zone “qq.com” IN {
type master;
file “qq.com.zone”;
};

logging{
channel query_log {
file “query.log” versions 3 size 20m;
severity info;
print-time yes;
print-category   yes;
};
category queries {
query_log;
};
};

cat /usr/local/bind/var/qq.com.zone
$ttl    1D
@               IN SOA  qq.com.  root.qq.com. (

1053891162
3H
15M
1W
1D )

IN NS          qq.com.
IN MX    5    qq.com.
www                IN A          127.0.0.1
*                  IN A          127.0.0.1

启动bind命令
/usr/local/bind-9.6.1-P1/sbin/named -c /usr/local/bind-9.6.1-P1/etc/named.conf -u nobody &
说明，所有客户端(通过此网关)DNS查询都可以在/usr/local/bind/var/query.log看到记录

8.Tor+Privoxy 穿墙
tor配置文件
grep -v “##” /usr/local/tor/etc/tor/torrc |grep .

SocksPort 9050 # what port to open for local application connections
SocksListenAddress 127.0.0.1 # accept connections only from localhost
#SocksListenAddress 192.168.0.1:9100 # listen on this IP:port also
#SocksPolicy accept 192.168.0.0/16
#SocksPolicy reject *
#Log notice file /usr/local/tor/var/log/tor/notices.log
#Log debug file /usr/local/tor/var/log/tor/debug.log
#Log notice syslog
#Log debug stderr
#RunAsDaemon 1
#DataDirectory /usr/local/tor/var/lib/tor
#ControlPort 9051
#HiddenServiceDir /usr/local/tor/var/lib/tor/hidden_service/
#HiddenServicePort 80 127.0.0.1:80
#HiddenServiceDir /usr/local/tor/var/lib/tor/other_hidden_service/
#HiddenServicePort 80 127.0.0.1:80
#HiddenServicePort 22 127.0.0.1:22
#
#Nickname ididnteditheconfig
#Address noname.example.com
#RelayBandwidthRate 100 KBytes  # Throttle traffic to 100KB/s (800Kbps)
#RelayBandwidthBurst 200 KBytes # But allow bursts up to 200KB/s (1600Kbps)
#ContactInfo Random Person <nobody AT example dot com>
#ContactInfo 1234D/FFFFFFFF Random Person <nobody AT example dot com>
#ORPort 9001
#ORListenAddress 0.0.0.0:9090
#DirPort 9030 # what port to advertise for directory connections
#DirListenAddress 0.0.0.0:9091
#MyFamily nickname1,nickname2,…
#ExitPolicy accept *:6660-6667,reject *:* # allow irc ports but no more
#ExitPolicy accept *:119 # accept nntp as well as default exit policy
#ExitPolicy reject *:* # no exits allowed
#
#
#ORPort 443
#BridgeRelay 1
#RelayBandwidthRate 50KBytes
#ExitPolicy reject *:*

Privoxy配置文件
grep -v “#” /usr/local/privoxy/etc/config |grep .
user-manual /usr/local/privoxy/share/doc/privoxy/user-manual/
trust-info-url  http://www.example.com/why_we_block.html
trust-info-url  http://www.example.com/what_we_allow.html
confdir /usr/local/privoxy/etc
logdir /usr/local/privoxy/var/log/privoxy
filterfile default.filter
logfile logfile
listen-address  0.0.0.0:8118
toggle  1
enable-remote-toggle  0
enable-remote-http-toggle  0
enable-edit-actions 0
enforce-blocks 0
buffer-limit 4096
forward-socks4a   /               127.0.0.1:9050 .
forwarded-connect-retries  0
accept-intercepted-requests 0
allow-cgi-request-crunching 0
split-large-forms 0

启动tor及privoxy
/usr/local/tor/bin/tor -f /usr/local/tor/etc/tor/torrc >/dev/null 2>&1 &
/usr/local/privoxy/sbin/privoxy –user nobody:nobody /usr/local/privoxy/etc/config

使用穿墙代理,客户在浏览器的代理设置代理服务器IP为网关，端口为privoxy 的8118

设定所有软件随系统动
/etc/rc.local内容
#!/bin/sh
#
# This script will be executed *after* all the other init scripts.
# You can put your own initialization stuff in here if you don’t
# want to do the full Sys V style init stuff.

touch /var/lock/subsys/local

/sbin/modprobe ip_conntrack hashsize=32768
echo “0″ >/proc/sys/net/ipv4/tcp_timestamps
echo “1″ > /proc/sys/net/ipv4/tcp_sack
echo “1″ >/proc/sys/net/ipv4/tcp_syncookies
echo “1″ > /proc/sys/net/ipv4/tcp_synack_retries
echo “1″ > /proc/sys/net/ipv4/tcp_syn_retries
echo “409600″>  /proc/sys/net/ipv4/route/max_size
echo “2621400″ >/proc/sys/net/ipv4/ip_conntrack_max
echo “8192″ > /proc/sys/net/core/somaxconn
echo “15000″ > /proc/sys/net/ipv4/tcp_max_syn_backlog

/usr/local/bind-9.6.1-P1/sbin/named -c /usr/local/bind-9.6.1-P1/etc/named.conf -u nobody &

##Start Squid
/bin/chown -R squid:squid /cache
/usr/local/squid/sbin/squid -z -f /usr/local/squid/etc/squid.conf
/usr/local/squid/sbin/squid -f /usr/local/squid/etc/squid.conf &

##Start Tor
/usr/local/tor-0.2.0.32/bin/tor -f /usr/local/tor-0.2.0.32/etc/tor/torrc >/dev/null 2>&1 &
/usr/local/privoxy/sbin/privoxy –user nobody:nobody /usr/local/privoxy/etc/config

##Start Havp
/sbin/mkfs.ext3 /dev/ram0
/bin/mount -o mand /dev/ram0 /var/tmp/havp/
/bin/chown -R clamav:clamav /var/tmp/havp
/usr/local/havp/sbin/havp

/usr/local/clamav/sbin/clamd &
/usr/local/clamav/bin/freshclam -d –quiet &
/etc/init.d/p3scan start

exit 0

限于个人的对系统和软件的认知，望各同学指正。我想基于此文档，生成我的vcache http://www.opvps.com/?page_id=220 (vmdk)的第三个版本
至此全文完!
